--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
 #left-div {
     background-color: #f2f2f2;
     width: 15%;
-    min-width: 160px;
+    min-width: 190px;
     padding: 30px;
 }
 
@@ -62,13 +62,13 @@ body {
 
 #left-div h2 {
     margin-left: 30px;
-    margin-top: 50px
+    margin-top: 50px;
 }
 
 #right-div {
     background-color: white;
     width: 85%;
-    min-width: 900px;
+    min-width: 600px;
     box-shadow: 7px 7px 5px 5px black;
 
 }
